--- a/Elastic/docker-compose.yml
+++ b/Elastic/docker-compose.yml
@@ -1,15 +1,16 @@
-version: '7.17'
+version: '3.8'
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.10
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.17.1
     container_name: elasticsearch
     environment:
       - node.name=elasticsearch
       - discovery.type=single-node
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
-      - xpack.security.enabled=false
+      - xpack.security.enabled=true
       - xpack.security.transport.ssl.enabled=false
+      - xpack.security.authc.api_key.enabled=true
     ulimits:
       memlock:
         soft: -1
@@ -20,7 +21,7 @@ services:
       - "9200:9200"
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.17.10
+    image: docker.elastic.co/kibana/kibana:8.17.1
     container_name: kibana
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
@@ -29,6 +30,21 @@ services:
     depends_on:
       - elasticsearch
 
+  elastic-connectors:
+    image: docker.elastic.co/enterprise-search/elastic-connectors:8.17.1
+    container_name: elastic-connectors
+    volumes:
+      - "./connectors-config:/config"
+    command: /app/bin/elastic-ingest -c /config/config.yml
+    network_mode: host
+    tty: true
+    stdin_open: true
+
 volumes:
   es_data:
     driver: local
+
+# RUN This on Elasticsearch docker exec to generate auth keys
+# bin/elasticsearch-setup-passwords auto
+# apikey elastic is need create with POST http://localhost:9200/_security/api_key
+# To generate Authorization : ApiKey encodebase64(id:api_key) from response
